# star

./: .gitignore  CMakeLists.txt
src/star/: CMakeLists.txt  Mat3.cpp  Mat3.hpp  Mat4.cpp  Mat4.hpp  Mat43.cpp  Mat43.hpp  Quaternion.cpp  Quaternion.hpp  RotMat.hpp  Transpose.cpp  Transpose.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp  matrix3.c  matrix3.h  matrix4.c  matrix4.h  matrix43.c  matrix43.h  matrix_multiplication.cpp  matrix_multiplication.hpp  quaternion.c  quaternion.h  star.h  star.hpp  typedefs.h  vector3.c  vector3.h  vector4.c  vector4.h
test/: CMakeLists.txt  matrix3_test.cpp  matrix_class_test.cpp  matrix_test.cpp  quaternion_class_test.cpp  quaternion_test.cpp  rotmat_class_test.cpp  vector3_main.c  vector3_test.cpp
